--- a/MyDriveWPF/MainWindow.xaml
+++ b/MyDriveWPF/MainWindow.xaml
@@ -13,7 +13,8 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="24*"/>
-            <RowDefinition Height="295*"/>
+            <RowDefinition Height="261*"/>
+            <RowDefinition Height="34*"/>
         </Grid.RowDefinitions>
         <Menu HorizontalAlignment="Left" Height="24" VerticalAlignment="Top" Width="182">
             <MenuItem Header="File">
@@ -25,8 +26,10 @@
             </MenuItem>
             <MenuItem Header="About us"/>
         </Menu>
-        <TreeView  Grid.Row="1" />
-        <ListView Grid.Row="1" x:Name="listView" ItemsSource="{Binding All}" MouseDoubleClick="ListView_MouseDoubleClick" Grid.ColumnSpan="2">
+        <TreeView  Grid.Row="1" Grid.RowSpan="2" >
+            <TextBlock TextWrapping="Wrap" Text="TextBlock"/>
+        </TreeView>
+        <ListView Grid.Row="1" x:Name="listView" ItemsSource="{Binding All}" MouseDoubleClick="ListView_MouseDoubleClick" Grid.ColumnSpan="2" Margin="0,0,0,34" Grid.RowSpan="2" SelectionChanged="listView_SelectionChanged">
             <ListView.ContextMenu>
                 <ContextMenu>
                     <MenuItem Header="AddFolder" Click="MenuItem_Click"></MenuItem>
@@ -34,5 +37,7 @@
             </ListView.ContextMenu>
         </ListView>
         <TextBox Grid.Column="1"  TextWrapping="Wrap" Text="{Binding  Current_path}"/>
+        <TextBox Grid.Column="1" Grid.Row="2" TextWrapping="Wrap" Name="RenameBox"/>
+        <Button Grid.Column="0" Grid.Row="2" Content="Rename:" FontSize="22" Click="Button_Click"/>
     </Grid>
 </Window>
