--- a/MyDriveWPF/MainWindow.xaml
+++ b/MyDriveWPF/MainWindow.xaml
@@ -12,9 +12,9 @@
             <ColumnDefinition Width="335*"/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
-            <RowDefinition Height="24*"/>
+            <RowDefinition Height="24"/>
             <RowDefinition Height="261*"/>
-            <RowDefinition Height="34*"/>
+            <RowDefinition Height="34"/>
         </Grid.RowDefinitions>
         <Menu HorizontalAlignment="Left" Height="24" VerticalAlignment="Top" Width="182">
             <MenuItem Header="File">
